Parallax image changed

--- a/SPE-website/pages/templates/pages/about.html
+++ b/SPE-website/pages/templates/pages/about.html
@@ -53,90 +53,93 @@
 </div>
 
 <!-- ACHIEVEMENTS OF THE CHAPTER -->
-<div class="container" style="padding:5% 0%;background-image: url(https://www.noticebard.com/wp-content/uploads/2019/09/IIT-ISM-jobs-in-Dhanbad.jpg);
-    min-height: 500px;
+<div class="parallax" style="background-image: url(../../../media/about_images/department.png) !important;
+    height: 340%;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;">
-    <div style="font-family: 'Dosis', sans-serif; color:#323d47; font-size:5rem; font-weight:600;text-align:center; letter-spacing:0.5px">
-        <p>ACHIEVEMENTS</p>
-    </div>
-
-    <section class="timeline" style="overflow: hidden;">
-        <div class="container">
-
-            <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
-
-                <div class="timeline-img"></div>
-
-                <div class="timeline-content timeline-card js--fadeInRight">
-                    <div class="timeline-img-header">
-                        <h2>OUTSTANDING STUDENT CHAPTER AWARD</h2>
-                    </div>
-                    <div class="date">Year 2010</div>
-                    <p>First of its kind in India, buoyed by the department, the chapter brought wreaths globally when it won the OUTSTANDING STUDENT CHAPTER AWARD in the year 2010. The award was presented to the chapter taking in view the distinctive level
-                        of participation during a single academic session. </p>
-                </div>
-
-            </div>
-
-            <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
-
-                <div class="timeline-img"></div>
-
-                <div class="timeline-content timeline-card js--fadeInRight">
-                    <div class="timeline-img-header">
-                        <h2>OUTSTANDING STUDENT CHAPTER AWARD</h2>
-                    </div>
-                    <div class="date">Year 2015</div>
-                    <p>As it says "It's easy to win but it's difficult to keep it". The chapter triumphed in retaining this status in 2015 by being again bestowed with the same award.</p>
-                </div>
-
-            </div>
-
-
-            <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
-
-                <div class="timeline-img"></div>
-
-                <div class="timeline-content timeline-card js--fadeInRight">
-                    <div class="timeline-img-header">
-                        <h2>GOLD STATUS AWARD</h2>
-                    </div>
-                    <div class="date">Year 2011-2014</div>
-                    <p>It has been a constant awardee of the GOLD STATUS AWARD successively in the years 2011-2014, preserving its performance in the category of membership, event planning and professionalism. </p>
-                </div>
-
-            </div>
-
-            <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
-
-                <div class="timeline-img"></div>
-
-                <div class="timeline-content timeline-card js--fadeInRight">
-                    <div class="timeline-img-header">
-                        <h2>SUB REGIONAL PAPER MEET</h2>
-                    </div>
-                    <div class="date">Year 2012 & 2016</div>
-                    <p>The chapter conducted SUB REGIONAL PAPER MEET in the years 2012 and 2016, where participants throughout the country presented their meticulous work, making it a huge success.</p>
-                </div>
-
-            </div>
-
-            <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
-
-                <div class="timeline-img"></div>
-
-                <div class="timeline-content timeline-card js--fadeInLeft">
-                    <div class="timeline-img-header">
-                        <h2>SOCIAL CONTRIBUTIONS</h2>
-                    </div>
-                    <p>In its endeavours to extend its social responsibilities, the chapter has conducted events like "GIVING TUESDAY" and setting up blood donation camps coordinating with "FAST FORWARD INDIA" an Institute founded NGO.</p>
-                </div>
-            </div>
+    background-size: cover;
+    overflow: hidden;">
+    <div class="container" style="padding:5% 0%;">
+        <div style="font-family: 'Dosis', sans-serif; color:white; font-size:6rem; font-weight:600;text-align:center; letter-spacing:3px">
+            <p>ACHIEVEMENTS</p>
         </div>
-    </section>
+
+        <section class="timeline" style="overflow: hidden;">
+            <div class="container">
+
+                <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content timeline-card js--fadeInRight">
+                        <div class="timeline-img-header">
+                            <h2>OUTSTANDING STUDENT CHAPTER AWARD</h2>
+                        </div>
+                        <div class="date">Year 2010</div>
+                        <p>First of its kind in India, buoyed by the department, the chapter brought wreaths globally when it won the OUTSTANDING STUDENT CHAPTER AWARD in the year 2010. The award was presented to the chapter taking in view the distinctive
+                            level of participation during a single academic session. </p>
+                    </div>
+
+                </div>
+
+                <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content timeline-card js--fadeInRight">
+                        <div class="timeline-img-header">
+                            <h2>OUTSTANDING STUDENT CHAPTER AWARD</h2>
+                        </div>
+                        <div class="date">Year 2015</div>
+                        <p>As it says "It's easy to win but it's difficult to keep it". The chapter triumphed in retaining this status in 2015 by being again bestowed with the same award.</p>
+                    </div>
+
+                </div>
+
+
+                <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content timeline-card js--fadeInRight">
+                        <div class="timeline-img-header">
+                            <h2>GOLD STATUS AWARD</h2>
+                        </div>
+                        <div class="date">Year 2011-2014</div>
+                        <p>It has been a constant awardee of the GOLD STATUS AWARD successively in the years 2011-2014, preserving its performance in the category of membership, event planning and professionalism. </p>
+                    </div>
+
+                </div>
+
+                <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content timeline-card js--fadeInRight">
+                        <div class="timeline-img-header">
+                            <h2>SUB REGIONAL PAPER MEET</h2>
+                        </div>
+                        <div class="date">Year 2012 & 2016</div>
+                        <p>The chapter conducted SUB REGIONAL PAPER MEET in the years 2012 and 2016, where participants throughout the country presented their meticulous work, making it a huge success.</p>
+                    </div>
+
+                </div>
+
+                <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content timeline-card js--fadeInLeft">
+                        <div class="timeline-img-header">
+                            <h2>SOCIAL CONTRIBUTIONS</h2>
+                        </div>
+                        <p>In its endeavours to extend its social responsibilities, the chapter has conducted events like "GIVING TUESDAY" and setting up blood donation camps coordinating with "FAST FORWARD INDIA" an Institute founded NGO.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 </div>
 
 
