--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -31,6 +31,84 @@
 <body>
 
     <!-- Navbar -->
+    <!-- <div style="display: inline !important;">
+        <nav class="mb-1 navbar navbar-expand-lg navbar-dark" style="background-color:#26416c">
+            <a class="navbar-brand" href="{% url 'homepage' %}">
+                <img src="https://cdn.asp.events/CLIENT_SPE__29FE44FF_5056_B733_49EC4D60A02A6A7D/sites/Asia-Pacific-Oil-Gas-2020/media/logos/SPE_Logo_2.png" width="170px" height="80px">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333" aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
+                <ul class="navbar-nav ml-auto nav-flex-icons">
+                    <li class="nav-item">
+                        <a class="nav-link waves-effect waves-light">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link waves-effect waves-light">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link waves-effect waves-light">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                    </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fas fa-user"></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
+                            <a class="dropdown-item" href="{% url 'user-posts' user.username %}">Profile</a>
+                            <a class="dropdown-item" href="{% url 'signout-page' %}">Sign Out</a>
+                        </div>
+                    </li>
+                    {% else %}
+                    <li>
+                        <a href="{% url 'signin-page' %}" class="nav-item nav-link">Sign In</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
+    </div> -->
+
+    <!-- 2nd navbar -->
+
+    <!-- <div style="display: inline !important;">
+        <nav class="navbar navbar-expand-md navbar-dark" style="background-color:#26416c;">
+            <div class="container-fluid">
+                <div id="main-nav" class="collapse navbar-collapse">
+                    <ul class="navbar-nav ml-auto">
+                        <li><a href="{% url 'homepage' %}" class="nav-item nav-link active">Home</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="nav-item nav-link" data-toggle="dropdown">Resources</a>
+                            <div class="dropdown-menu">
+                                <a href="{% url 'blog-home' %}" class="dropdown-item">Blogs</a>
+                                <a href="{% url 'gazette' %}" class="dropdown-item">Gazette</a>
+                            </div>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="nav-item nav-link" data-toggle="dropdown">Events</a>
+                            <div class="dropdown-menu">
+                                <a href="{% url 'events-home' %}" class="dropdown-item">Upcoming</a>
+                                <a href="{% url 'events-past' %}" class="dropdown-item">Past</a>
+                            </div>
+                        </li>
+                        <li><a href="{% url 'gallery-page' %}" class="nav-item nav-link">Gallery</a></li>
+                        <li><a href="#" class="nav-item nav-link">Contact</a></li>
+                        <li><a href="{% url 'about-page' %}" class="nav-item nav-link">About Us</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div> -->
+
+
+
     <nav class="navbar navbar-expand-md navbar-dark" style="background-color:#26416c; box-shadow: none !important;">
         <div class="container-fluid">
             <a href="{% url 'homepage' %}" class="navbar-brand">
