--- a/SPE-website/blog/templates/blog/user_posts.html
+++ b/SPE-website/blog/templates/blog/user_posts.html
@@ -16,13 +16,22 @@
     {% block content%}
 
         <!--User info only visible to logged in user-->
-        <!--style it-->
+        <!--added a temporary style, frontend guys can change it later -Shirin -->
         {% if req_user == user %}
-            <h1>Username: {{user.username}}</h1>
-            <h2>Email: {{user.email}}</h2>
-            <h2>SPE-ID: {{user.foobar.SPE_ID}}</h2>
-            <h2>Registration Number: {{user.foobar.institute_registration_number}}</h2>
-            <!--add other fields here when models are created-->
+            <h1 class="mb-3 d-flex justify-content-center" id="PageTitle">
+                Profile information
+            </h1>
+            <hr class="d-flex justify-content-center" id="UnderlineTitle" style="width: 25%;">
+            <div id="PostContainer">
+                <div id="PostBody" class="media content-section col-md-8 mx-auto" style="padding: 20px;">
+                    <div class="media-body">
+                        <h6 id="ArticleTitle">Username: {{ user.username }}</h6>
+                        <h6 id="ArticleTitle">E-Mail: {{ user.email }} </h6>
+                        <h6 id="ArticleTitle">SPE-ID: {{ user.foobar.SPE_ID }}</h6>
+                        <h6 id="ArticleTitle">Registration Number: {{user.foobar.institute_registration_number}}</h6>
+                    </div>
+                </div>
+            </div>
         {% endif %}
         <!--end user info-->
 
@@ -41,17 +50,8 @@
             {% for post in posts %}
                     <div id="PostBody" class="media content-section col-md-8 mx-auto" style="padding: 20px;">
                         <div class="media-body">
-                            <img id="PostImage" src="{{ post.image.url }}">
                             <h1 id="ArticleTitle">{{ post.title }}</h1>
-                            <div id="ArticleMetaData">
-                                <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
-                                <small class="text-muted">{{ post.date_posted|date:"M j, Y"}}</small>
-                                <hr id="Underline" align="left">
-                            </div>
                             <p class="article-content">{{ post.overview }}</p>
-                            <a href="{% url 'post-detail' post.id %}">
-                                <button type="button" class="btn btn-primary">Read More</button>
-                            </a>
                         </div>
                     </div>
             {% endfor %}
