--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -12,14 +12,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="{% static 'pages/body.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'pages/navbar.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'pages/low-navbar.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'pages/scroll-to-top-button.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'pages/footer.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <!-- to load header files for blog -->
     {% block content-blog %} {% endblock content-blog %}
@@ -139,8 +136,6 @@
                         </div>
                     </li>
                     <li><a href="{% url 'gallery-page' %}" class="nav-item nav-link">Gallery</a></li>
-                    <li><a href="#" class="nav-item nav-link">Contact</a></li>
-                    <li><a href="{% url 'about-page' %}" class="nav-item nav-link">About Us</a></li>
                     {% if user.is_authenticated %}
                     <li class="dropdown">
                         <a><span class="material-icons" id="AccountCircle" >account_circle</span></a>
@@ -158,12 +153,35 @@
             </div>
         </div>
     </nav>
+
+     <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark lower-navbar" style="position: relative; z-index: 1;">
+
+      <!-- Collapsible content -->
+      <div class="collapse navbar-collapse" id="basicExampleNav">
+
+        <!-- Links -->
+        <ul class="navbar-nav ml-auto">
+
+          <li class="nav-item" id="LowNavLink1">
+            <a class="low-nav-item" href="{% url 'about-page' %}" style="">Contact Us</a>
+          </li>
+          <li class="nav-item" id="LowNavLink2">
+            <a class="low-nav-item" href="#">About Us</a>
+          </li>
+
+        </ul>
+        <!-- Links -->
+
+    </nav>
+    <!--/.Navbar-->
+
     <div style="padding-top:100px;"></div>
 
 
     <!-- Messages -->
     {% if messages %} {% for message in messages %}
-    <div class="alert alert-{{ message.tags }}">
+    <div class="alert alert-{{ message.tags }}" style="height: 40px; font-size: 20px;">
         {{ message }}
     </div>
     {% endfor %} {% endif %}
@@ -321,6 +339,10 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script>
         jQuery(function($) {
