--- a/SPE-website/pages/templates/pages/about.html
+++ b/SPE-website/pages/templates/pages/about.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'pages/about.css' %}"> {% endblock content-blog %} {% block content %}
 <div class="hero-image" style="margin-top: -14px; overflow: hidden;">
     <div class="hero-text">
-        <h1 style="font-size:50px; font-family: 'Carter One', cursive; font-size: 80px;" data-aos="fade-down" data-aos-duration="3000">About us</h1>
+        <h1 style="font-family: 'Barlow', sans-serif; font-size: 80px; font-weight: 900;" data-aos="fade-down" data-aos-duration="3000">About us</h1>
     </div>
     <a href="#" id="downBtn">
         <span class="container" style="height: 24px; width: 24px; position: relative; left: 50%; top: 60%;">
