--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -65,10 +65,15 @@
 </div>
 
 
-<div class="container">
+<div class="container" style="padding:5% 0">
     <div class="row">
         <div class="col-lg-6 col-sm-12">
-            <p style="font-size: 3rem; font-weight: 700;">WHO WE ARE</p>
+            <p style="font-size: 4rem; font-weight: 700; text-align: center;">WHO WE ARE</p>
+            <p style="line-height: 2.0; font-size: 2.0rem;font-weight:500;">
+                Since 1984, SPE IIT(ISM) STUDENT CHAPTER has kept expanding itself to from its being. Taking the oath to help the students, the institute and the society in general, it has been paving an incredible path. From being, one of its kind in the country to
+                be the OUTSTANDING STUDENT CHAPTER (2010 & 2015) globally, it has not only brought laurels to the institute but also the country at the global level.
+            </p>
+            <a href="#" class="homebutton">Hover me</a>
         </div>
         <div class="col-lg-6 col-sm-6">
             <p style="font-size: 3rem; font-weight: 700;">ANNOUNCEMENTS</p>
