--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -1,6 +1,7 @@
 {% extends 'pages/base.html' %} {% load static %} {% block content-blog %}
-<link rel="stylesheet" type="text/css" href="{% static 'pages/home.css' %}"> {% endblock content-blog %} {% block content %}
-<div class="slider-container" style="margin-top: -150px; z-index:-1;">
+<link rel="stylesheet" type="text/css" href="{% static 'pages/Home.css' %}"> {% endblock content-blog %} {% block content %}
+<div style="padding-top:100px;"></div>
+<!-- <div class="slider-container" style="margin-top: -150px; z-index:-1;">
     <div class="slider-control left inactive"></div>
     <div class="slider-control right"></div>
     <ul class="slider-pagi"></ul>
@@ -62,10 +63,10 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 
-<div class="container" style="padding:5% 0">
+<div class="container" style="padding:5% 0; color: black !important;font-family: 'Dosis', sans-serif;">
     <div class="row">
         <div class="col-lg-6 col-sm-12">
             <p style="font-size: 4rem; font-weight: 700; text-align: center;">WHO WE ARE</p>
@@ -73,14 +74,64 @@
                 Since 1984, SPE IIT(ISM) STUDENT CHAPTER has kept expanding itself to from its being. Taking the oath to help the students, the institute and the society in general, it has been paving an incredible path. From being, one of its kind in the country to
                 be the OUTSTANDING STUDENT CHAPTER (2010 & 2015) globally, it has not only brought laurels to the institute but also the country at the global level.
             </p>
-            <a href="#" class="homebutton">Hover me</a>
+            <!-- <button type="button" class="btn btn-primary btn-lg btn-rounded"><a href="{% url 'about-page' %}">About Us</a></button> -->
+            <div class="container" style=" padding-top: 50px;
+                margin: 0 auto;
+                width: 100%;
+                text-align: center;">
+                <a href="{% url 'about-page' %}" class="button" style="font-size: 20px;">Read More</a>
+            </div>
         </div>
-        <div class="col-lg-6 col-sm-6">
-            <p style="font-size: 3rem; font-weight: 700;">ANNOUNCEMENTS</p>
+        <div class="col-lg-6 col-sm-12">
+            <p style="font-size: 4rem; font-weight: 700; text-align: center;">ANNOUNCEMENTS</p>
         </div>
     </div>
 </div>
 
+
+<!-- Blogs Section -->
+
+
+<div class="container" style="padding:5% 0;font-family: 'Dosis', sans-serif; overflow: hidden;">
+    <p style="padding-bottom: 5%;font-size: 4rem; font-weight: 700; text-align: center;">BLOGS</p>
+    <div class="post">
+        <div class="post-left">
+            <div class="post-left_title">What’s fueling the global Things</div>
+            <div class="post-left_title_sub">Popular Blog</div>
+            <div class="post-left_border"></div>
+            <div class="post-left_author">
+                <img src="#">
+                <p>Author Name</p>
+            </div>
+        </div>
+        <div class="post-right">
+            <div class="post-right_body">
+                <p><span>T</span>hings are looking challenging for the global downstream market. With MARPOL regulations scheduled to go into effect on January 1 and the energy transition well underway, the outlook is more complex than ever. With that in
+                    mind, what can we expect to see within the downstream market? What, besides major factors like MARPOL and the energy transition, will shape the market going forward, and what developments might emerge in the coming few years?
+                </p>
+                <p>We answered these questions and more at our recent webinar “Three factors fueling the global downstream market.</p>
+            </div>
+            <div class="post-right_footer">
+                <div class="post-right_footer_date">
+                    <p>Friday 06 Oct 2020</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container" style=" padding-top: 50px;
+        margin: 0 auto;
+        width: 100%;
+        text-align: center;">
+        <a href="{% url 'blog-home' %}" class="button" style="font-size: 20px;">Click to read more</a>
+    </div>
+</div>
+
+<!-- Blog Section End -->
+
+<!-- Jquery Counter -->
+
+<!-- Jquery Counter end-->
 
 
 
