team member page done

--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -142,16 +142,16 @@
                         </div>
                         <div class="row">
                             <div class="col-md-6">
-                                <p><a class="scroll-link" href="{% url 'homepage' %}">Home</a></p>
-                                <p><a href="#">About us</a></p>
-                                <p><a href="#">Resources</a></p>
-                                <p><a href="#">Events</a></p>
+                                <p><a class="imp-link" href="https://www.spe.org/en/">SPE International</a></p>
+                                <p><a class="imp-link" href="https://www.iitism.ac.in/">IIT ISM Official Website</a></p>
+                                <p><a class="imp-link" href="https://parent.iitism.ac.in/index.php/parent_portal/portal0">Parents Portal</a></p>
+                                <p><a class="imp-link" href="https://ir.iitism.ac.in/">International Relations</a></p>
                             </div>
-                            <div class="col-md-6">
-                                <p><a href="#">Gallery</p>
-                                <p><a href="#">Contact</a></p>
-                                <p><a href="#">Our Team</a></p>
-                            </div>
+<!--                            <div class="col-md-6">-->
+<!--                                <p><a href="#">Gallery</p>-->
+<!--                                <p><a href="#">Contact</a></p>-->
+<!--                                <p><a href="#">Our Team</a></p>-->
+<!--                            </div>-->
                         </div>
                     </div>
                 </div>
