--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -2,15 +2,194 @@
 {% load static %}
 
 {% block content-blog %}
-    <link rel="stylesheet" type="text/css" href="{% static 'pages/core-team.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'pages/teampage.css' %}">
 {% endblock content-blog %}
 
 {% block content %}
 
-<br>
-<br>
-<br>
-<br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <div class="container col-md-11">
+
+        <!-- Team Image-->
+        <h1 class="d-flex justify-content-center" id="PageTitle">Our Team</h1>
+                <hr class="d-flex justify-content-center" id="UnderlineTitle">
+
+        <img class="team-vector d-block mx-auto" src="{% static 'pages/team-images/team-members.png' %}">
+        <!-- Team Image-->
+
+        <!--Office Bearers Section-->
+        <div class="d-block mx-auto">
+            <h1 class="office-bearers d-flex justify-content-center">Office Bearers:</h1>
+            <hr class="office-bearers-underline d-block mx-auto" style="margin-bottom: 40px;">
+        </div>
+        <div class="d-block mx-auto">
+                <div class="grid-container">
+
+                    <!-- Card -->
+                    <div class="card">
+                      <!-- Card image -->
+                      <div class="view overlay">
+                        <img class="card-img-top" src="https://iitism.irins.org/assets/profile_images/608632.jpg"
+                          alt="Card image cap" style="">
+                        <a href="#!">
+                          <div class="mask rgba-white-slight"></div>
+                        </a>
+                      </div>
+                      <!-- Card content -->
+                      <div class="card-body">
+                        <!-- Title -->
+                        <h4 class="card-title" style="color: white;">Lorem Ipsum Dolor</h4>
+                          <hr class="title-partition">
+                        <!-- Text -->
+                        <p class="card-text" style="font-size: 20px; color: white;">Some quick example text to build on the card title and make up the bulk of the card's
+                          content.</p>
+                      </div>
+                    </div>
+                    <!-- Card -->
+
+                    <!-- Card -->
+                    <div class="card">
+                      <!-- Card image -->
+                      <div class="view overlay">
+                        <img class="card-img-top" src="https://iitism.irins.org/assets/profile_images/608632.jpg"
+                          alt="Card image cap" style="">
+                        <a href="#!">
+                          <div class="mask rgba-white-slight"></div>
+                        </a>
+                      </div>
+                      <!-- Card content -->
+                      <div class="card-body">
+                        <!-- Title -->
+                        <h4 class="card-title" style="color: white;">Lorem Ipsum Dolor</h4>
+                          <hr class="title-partition">
+                        <!-- Text -->
+                        <p class="card-text" style="font-size: 20px; color: white;">Some quick example text to build on the card title and make up the bulk of the card's
+                          content.</p>
+                      </div>
+                    </div>
+                    <!-- Card -->
+
+                    <!-- Card -->
+                    <div class="card">
+                      <!-- Card image -->
+                      <div class="view overlay">
+                        <img class="card-img-top" src="https://iitism.irins.org/assets/profile_images/608632.jpg"
+                          alt="Card image cap" style="">
+                        <a href="#!">
+                          <div class="mask rgba-white-slight"></div>
+                        </a>
+                      </div>
+                      <!-- Card content -->
+                      <div class="card-body">
+                        <!-- Title -->
+                        <h4 class="card-title" style="color: white;">Lorem Ipsum Dolor</h4>
+                          <hr class="title-partition">
+                        <!-- Text -->
+                        <p class="card-text" style="font-size: 20px; color: white;">Some quick example text to build on the card title and make up the bulk of the card's
+                          content.</p>
+                      </div>
+                    </div>
+                    <!-- Card -->
+
+                </div>
+            </div>
+        </div>
+        <!--Office Bearers Section-->
+
+        <br><br><br><br>
+
+        <!--Core Team Section-->
+        <div class="d-block mx-auto">
+            <h1 class="office-bearers d-flex justify-content-center">Core Team:</h1>
+            <hr class="office-bearers-underline d-block mr-auto" style="margin-bottom: 40px;">
+        </div>
+        <img class="team-vector d-block mx-auto" src="{% static 'pages/team-images/core-team.jpg' %}" style="width: 1500px;">
+        <!--Core Team Section-->
+
+        <br><br><br><br>
+
+        <!--Developer Section-->
+        <div class="d-block mx-auto">
+            <h1 class="office-bearers d-flex justify-content-center">Developer Team:</h1>
+            <hr class="office-bearers-underline d-block mx-auto" style="margin-bottom: 40px;">
+        </div>
+        <div class="d-block mx-auto">
+                <div class="grid-container">
+
+                    <!-- Card -->
+                    <div class="card">
+                      <!-- Card image -->
+                      <div class="view overlay">
+                        <img class="card-img-top" src="https://iitism.irins.org/assets/profile_images/608632.jpg"
+                          alt="Card image cap" style="">
+                        <a href="#!">
+                          <div class="mask rgba-white-slight"></div>
+                        </a>
+                      </div>
+                      <!-- Card content -->
+                      <div class="card-body">
+                        <!-- Title -->
+                        <h4 class="card-title" style="color: white;">Lorem Ipsum Dolor</h4>
+                          <hr class="title-partition">
+                        <!-- Text -->
+                        <p class="card-text" style="font-size: 20px; color: white;">Some quick example text to build on the card title and make up the bulk of the card's
+                          content.</p>
+                      </div>
+                    </div>
+                    <!-- Card -->
+
+                    <!-- Card -->
+                    <div class="card">
+                      <!-- Card image -->
+                      <div class="view overlay">
+                        <img class="card-img-top" src="https://iitism.irins.org/assets/profile_images/608632.jpg"
+                          alt="Card image cap" style="">
+                        <a href="#!">
+                          <div class="mask rgba-white-slight"></div>
+                        </a>
+                      </div>
+                      <!-- Card content -->
+                      <div class="card-body">
+                        <!-- Title -->
+                        <h4 class="card-title" style="color: white;">Lorem Ipsum Dolor</h4>
+                          <hr class="title-partition">
+                        <!-- Text -->
+                        <p class="card-text" style="font-size: 20px; color: white;">Some quick example text to build on the card title and make up the bulk of the card's
+                          content.</p>
+                      </div>
+                    </div>
+                    <!-- Card -->
+
+                    <!-- Card -->
+                    <div class="card">
+                      <!-- Card image -->
+                      <div class="view overlay">
+                        <img class="card-img-top" src="https://iitism.irins.org/assets/profile_images/608632.jpg"
+                          alt="Card image cap" style="">
+                        <a href="#!">
+                          <div class="mask rgba-white-slight"></div>
+                        </a>
+                      </div>
+                      <!-- Card content -->
+                      <div class="card-body">
+                        <!-- Title -->
+                        <h4 class="card-title" style="color: white;">Lorem Ipsum Dolor</h4>
+                          <hr class="title-partition">
+                        <!-- Text -->
+                        <p class="card-text" style="font-size: 20px; color: white;">Some quick example text to build on the card title and make up the bulk of the card's
+                          content.</p>
+                      </div>
+                    </div>
+                    <!-- Card -->
+
+                </div>
+                 <!--Developer Section-->
+
+            </div>
 
 
 {% endblock content %}
