--- a/SPE-website/pages/templates/pages/gallery.html
+++ b/SPE-website/pages/templates/pages/gallery.html
@@ -76,29 +76,29 @@
 <section class="gallery">
     <div class="row">
         <ul>
-            <a href="#" class="close"></a>
-            <li>
-                <a href="#item01">
-                    <img src="/media/gallery_images/i1.png" alt="">
-                </a>
-            </li>
+<!--            <a href="#" class="close"></a>-->
+<!--            <li>-->
+<!--                <a href="#item01">-->
+<!--                    <img src="/media/gallery_images/i1.png" alt="">-->
+<!--                </a>-->
+<!--            </li>-->
 
-            <li>
-                <a href="#item02">
-                    <img src="/media/gallery_images/i2.png" alt="">
-                </a>
-            </li>
+<!--            <li>-->
+<!--                <a href="#item02">-->
+<!--                    <img src="/media/gallery_images/i2.png" alt="">-->
+<!--                </a>-->
+<!--            </li>-->
 
-            <li>
-                <a href="#item02">
-                    <img src="/media/gallery_images/i3.png" alt="">
-                </a>
-            </li>
-            <li>
-                <a class="image" href="#item01">
-                    <img src="/media/gallery_images/fipi2.jpg" alt="">
-                </a>
-            </li>
+<!--            <li>-->
+<!--                <a href="#item02">-->
+<!--                    <img src="/media/gallery_images/i3.png" alt="">-->
+<!--                </a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <a class="image" href="#item01">-->
+<!--                    <img src="/media/gallery_images/fipi2.jpg" alt="">-->
+<!--                </a>-->
+<!--            </li>-->
             <li>
                 <a class="image" href="#item02">
                     <img src="/media/gallery_images/t1.png" alt="">
