--- a/SPE-website/pages/templates/pages/gazette.html
+++ b/SPE-website/pages/templates/pages/gazette.html
@@ -44,6 +44,7 @@
                 </div>
               </div>
 
+<!--                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.1210188251025!2d86.43899201493429!3d23.814295284557904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f6bc9fac678481%3A0x122cb1d133a89995!2sIndian%20Institute%20of%20Technology%20(Indian%20School%20of%20Mines)%20Dhanbad!5e0!3m2!1sen!2sin!4v1606388466336!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>-->
 
             </div>
 
