contact page added

--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -86,7 +86,7 @@
             <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item" id="LowNavLink1">
-                    <a class="low-nav-item" href="#">Contact Us</a>
+                    <a class="low-nav-item" href="{% url 'contact-page' %}">Contact Us</a>
                 </li>
                 <li class="nav-item" id="LowNavLink2">
                     <a class="low-nav-item" href="{% url 'about-page' %}">About Us</a>
