--- a/SPE-website/pages/templates/pages/contact-us.html
+++ b/SPE-website/pages/templates/pages/contact-us.html
@@ -1,1 +1,42 @@
-<h1>hello frands</h1>
+{% extends 'pages/base.html' %}
+{% load static %}
+
+{% block content-blog %}
+    <link rel="stylesheet" type="text/css" href="{% static 'pages/contact-us.css' %}">
+{% endblock content-blog %}
+
+{% block content %}
+<br><br><br><br>
+
+    <div class="container col-md-12" style="overflow: auto;">
+        <h1 class="d-flex justify-content-center" id="PageTitle">Contact Us</h1>
+        <hr class="d-flex justify-content-center" id="UnderlineTitle">
+
+        <!-- Map -->
+        <iframe class="campus-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.050993378705!2d86.44052288742586!3d23.816785667484353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f6bc9e686d5683%3A0x86d9a087075f347b!2sDepartment%20of%20Petroleum%20Engineering!5e0!3m2!1sen!2sin!4v1606394674410!5m2!1sen!2sin"
+                width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <!-- Map -->
+
+        <div class="container" style="margin-top: 150px;">
+
+            <!-- Address -->
+            <p class="contact-info"><i class="fas fa-map-marker-alt"></i>
+                Department of Petroleum Engineering, IIT (ISM) Dhanbad (695.89 km) 826004 Dhanbad, Jharkhand, India</p>
+            <br>
+            <!-- Address -->
+
+            <!-- Contact Number -->
+            <p class="contact-info"><i class="fas fa-phone"></i> Phone: 087098 43266</p>
+            <br>
+            <!-- Contact Number -->
+
+            <!-- Email -->
+            <p class="contact-info"><i class="fas fa-envelope"></i> Email: speiitismsc@domain.com</p>
+            <br>
+            <!-- Email -->
+
+        </div>
+
+    </div>
+
+{% endblock content %}
