Home sections added

--- a/SPE-website/pages/static/pages/home.css
+++ b/SPE-website/pages/static/pages/home.css
@@ -391,7 +391,7 @@ svg {
 
 .post-left {
     width: 40%;
-    background-color: #484855;
+    background-color: #20206c;
     color: white;
     padding: 3em;
     position: relative;
