--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -1,5 +1,32 @@
 {% extends 'pages/base.html' %} {% load static %} {% block content-blog %}
-<link rel="stylesheet" type="text/css" href="{% static 'pages/Home.css' %}"> {% endblock content-blog %} {% block content %}
+<link rel="stylesheet" type="text/css" href="{% static 'pages/Home.css' %}">
+<style>
+    /* Styling the announcements card */
+    
+    marquee {
+        max-height: 230px;
+    }
+    
+    .pointer {
+        cursor: pointer;
+    }
+    
+    .card-header {
+        text-align: center;
+        background: #003262;
+        color: #f2f2f2;
+        font-weight: 500;
+        font-size: 2rem;
+    }
+    
+    @media (min-width: 576px) {
+        .modal-dialog {
+            max-width: 70%;
+            margin: 0.25rem auto;
+        }
+    }
+</style>
+{% endblock content-blog %} {% block content %}
 <div style="padding-top:100px;"></div>
 <!-- <div class="slider-container" style="margin-top: -150px; z-index:-1;">
     <div class="slider-control left inactive"></div>
@@ -66,15 +93,14 @@
 </div> -->
 
 
-<div class="container" style="padding:5% 0; color: black !important;font-family: 'Dosis', sans-serif;">
+<div class="container" style="color: black !important;font-family: 'Dosis', sans-serif;">
     <div class="row">
-        <div class="col-lg-6 col-sm-12">
+        <div class="col-lg-6 col-sm-12" style="padding:5% 1%;">
             <p style="font-size: 4rem; font-weight: 700; text-align: center;">WHO WE ARE</p>
             <p style="line-height: 2.0; font-size: 2.0rem;font-weight:500;">
                 Since 1984, SPE IIT(ISM) STUDENT CHAPTER has kept expanding itself to from its being. Taking the oath to help the students, the institute and the society in general, it has been paving an incredible path. From being, one of its kind in the country to
                 be the OUTSTANDING STUDENT CHAPTER (2010 & 2015) globally, it has not only brought laurels to the institute but also the country at the global level.
             </p>
-            <!-- <button type="button" class="btn btn-primary btn-lg btn-rounded"><a href="{% url 'about-page' %}">About Us</a></button> -->
             <div class="container" style=" padding-top: 50px;
                 margin: 0 auto;
                 width: 100%;
@@ -82,8 +108,36 @@
                 <a href="{% url 'about-page' %}" class="button" style="font-size: 20px;">Read More</a>
             </div>
         </div>
-        <div class="col-lg-6 col-sm-12">
-            <p style="font-size: 4rem; font-weight: 700; text-align: center;">ANNOUNCEMENTS</p>
+        <div class="col-lg-6 col-sm-12" style="padding:5% 1%;">
+            <div class="card shadow">
+                <div class="card-header">ANNOUNCEMENTS</div>
+                <div class="card-body">
+                    <div class="test">
+                        <marquee direction="up" onmouseover="this.stop();" onmouseout="this.start(); " scrollamount="3">
+                            <p> <b>
+                         <br> <a href="#">
+                    1   .&nbsp;Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</a>
+                             <br>
+                         <br>                 
+                             <a href="#">
+                    2   .&nbsp;It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </a>
+                             <br>
+                         <br>                    
+                             <a href="#">
+                    3   .&nbsp;Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words</a>
+                             <br>
+                         <br>
+                         <a href="#">
+                    4  .&nbsp;There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</a>
+                             <br>  
+                            </b></p>
+                        </marquee>
+                        <br>
+                        <br>
+
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -91,39 +145,40 @@
 
 <!-- Blogs Section -->
 
-
-<div class="container" style="padding:5% 0;font-family: 'Dosis', sans-serif; overflow: hidden;">
-    <p style="padding-bottom: 5%;font-size: 4rem; font-weight: 700; text-align: center;">BLOGS</p>
-    <div class="post">
-        <div class="post-left">
-            <div class="post-left_title">What’s fueling the global Things</div>
-            <div class="post-left_title_sub">Popular Blog</div>
-            <div class="post-left_border"></div>
-            <div class="post-left_author">
-                <img src="#">
-                <p>Author Name</p>
+<div class="container-fluid" style=" background-color: #89998e;">
+    <div class="container" style="padding:5% 0;font-family: 'Dosis', sans-serif; overflow: hidden;">
+        <p style="padding-bottom: 5%;font-size: 4rem; font-weight: 700; text-align: center;">BLOGS</p>
+        <div class="post">
+            <div class="post-left">
+                <div class="post-left_title">What’s fueling the global Things</div>
+                <div class="post-left_title_sub">Popular Blog</div>
+                <div class="post-left_border"></div>
+                <div class="post-left_author">
+                    <img src="#">
+                    <p>Author Name</p>
+                </div>
             </div>
-        </div>
-        <div class="post-right">
-            <div class="post-right_body">
-                <p><span>T</span>hings are looking challenging for the global downstream market. With MARPOL regulations scheduled to go into effect on January 1 and the energy transition well underway, the outlook is more complex than ever. With that in
-                    mind, what can we expect to see within the downstream market? What, besides major factors like MARPOL and the energy transition, will shape the market going forward, and what developments might emerge in the coming few years?
-                </p>
-                <p>We answered these questions and more at our recent webinar “Three factors fueling the global downstream market.</p>
-            </div>
-            <div class="post-right_footer">
-                <div class="post-right_footer_date">
-                    <p>Friday 06 Oct 2020</p>
+            <div class="post-right">
+                <div class="post-right_body">
+                    <p><span>T</span>hings are looking challenging for the global downstream market. With MARPOL regulations scheduled to go into effect on January 1 and the energy transition well underway, the outlook is more complex than ever. With that
+                        in mind, what can we expect to see within the downstream market? What, besides major factors like MARPOL and the energy transition, will shape the market going forward, and what developments might emerge in the coming few years?
+                    </p>
+                    <p>We answered these questions and more at our recent webinar “Three factors fueling the global downstream market.</p>
+                </div>
+                <div class="post-right_footer">
+                    <div class="post-right_footer_date">
+                        <p>Friday 06 Oct 2020</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="container" style=" padding-top: 50px;
-        margin: 0 auto;
-        width: 100%;
-        text-align: center;">
-        <a href="{% url 'blog-home' %}" class="button" style="font-size: 20px;">Click to read more</a>
+        <div class="container" style=" padding-top: 50px;
+            margin: 0 auto;
+            width: 100%;
+            text-align: center;">
+            <a href="{% url 'blog-home' %}" class="button" style="font-size: 20px;">Click to read more</a>
+        </div>
     </div>
 </div>
 
@@ -133,15 +188,57 @@
 
 <!-- Jquery Counter end-->
 
+<!-- Social Media Cards -->
+<div class="container" style="padding: 5% 0;">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card shadow">
+                <div class="card-header">Facebook</div>
+                <div class="card-body" style="line-height: 24px;">
+                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fspeismsc%2F&tabs=timeline&width=300&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="350"
+                        style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="col-md-4">
+            <div class="card shadow">
+                <div class="card-header">Facebook</div>
+                <div class="card-body" style="line-height: 24px;">
+                    <iframe src="" width="300" height="250" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card shadow">
+                <div class="card-header">Facebook</div>
+                <div class="card-body" style="line-height: 24px;">
+                    <iframe src="" width="300" height="250" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
+        </div> -->
+    </div>
+</div>
 
-
-
-
-
-
-
-
-
+<!-- Our Team Section -->
+<div class="container-fluid" style="background-image: url(https://i.pinimg.com/originals/e9/86/d8/e986d84d458dbf78014805424ecdab3f.png); background-size: cover; margin-bottom: 10%;">
+    <div class="container" style="color: black !important;font-family: 'Dosis', sans-serif;">
+        <div style="padding:5% 1%;">
+            <p style="font-size: 4rem; font-weight: 700; text-align: center;">KNOW OUR TEAM</p>
+            <p style="line-height: 2.0; font-size: 2.0rem;font-weight:500;">
+                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up
+                one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de
+                Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..",
+                comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their
+                exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+            <div class="container" style=" padding-top: 50px;
+                margin: 0 auto;
+                width: 100%;
+                text-align: center;">
+                <a href="{% url 'about-page' %}" class="button" style="font-size: 20px;">Click Here</a>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
